--- a/Norriq-Solutions/Pages/FunctionPage.html
+++ b/Norriq-Solutions/Pages/FunctionPage.html
@@ -12,17 +12,19 @@
     </div>
 </div>
     <div class="main-body">
-        <p>Hvad har du brug for hjælp til?</p>
-        <form action="../Pages/NORRIQSolutionsPage.html">
-            <input type="checkbox" id="ApplicationSolution1" name="ApplicationSolution1" value="Website" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution1"> Jeg ønsker at få en hjemmeside.</label><br>
-            <input type="checkbox" id="ApplicationSolution2" name="ApplicationSolution2" value="Webshop" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution2"> Jeg ønsker at få en webshop.</label><br>
-            <input type="checkbox" id="Solution3" name="ApplicationSolution3" value="Application" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution3"> Jeg ønsker en applikation.</label><br><br>
+        <p>Hvilke funktioner ønsker du?</p>
+        <form action="../Pages/LanguagePage.html">
+            <input type="checkbox" id="FuntionSolution1" name="FunctionSolution1" value="Booking" onclick="selectOnlyThisFuntion(this.id)">
+            <label for="FunctionSolution1"> Booking.</label><br>
+            <input type="checkbox" id="FunctionSolution2" name="FunctionSolution2" value="Event" onclick="selectOnlyThisFunction(this.id)">
+            <label for="FunctionSolution2"> Event.</label><br>
+            <input type="checkbox" id="FunctionSolution3" name="FunctionSolution3" value="Restaurant" onclick="selectOnlyThisFunction(this.id)">
+            <label for="FunctionSolution3"> Restaurant.</label><br>
+            <input type="checkbox" id="FunctionSolution4" name="FunctionSolution4" value="Webudvikling" onclick="selectOnlyThisFunction(this.id)">
+            <label for="FunctionSolution4"> Webudvikling.</label><br><br>
 
             <button onclick="goBack()">Tilbage</button>
-            <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedApplication();">
+            <input type="submit" value="Næste" onclick="return WhichFunctionIsChecked()">
         </form>
 
     </div>
