--- a/Norriq-Solutions/Pages/ApplicationTypePage.html
+++ b/Norriq-Solutions/Pages/ApplicationTypePage.html
@@ -13,7 +13,7 @@
     </div>
     <div class="main-body">
         <p>Hvilken applikationstype ønsker du?</p>
-        <form action="../Pages/FunctionPage.html">
+        <form action="../Pages/NORRIQSolutionsApplication.html">
             <input type="checkbox" id="ApplicationSolution1" name="ApplicationSolution1" value="IOS" onclick="selectOnlyThisApplication(this.id)">
             <label for="ApplicationSolution1"> Jeg ønsker en IOS applikation.</label><br>
             <input type="checkbox" id="ApplicationSolution2" name="ApplicationSolution2" value="Android" onclick="selectOnlyThisApplication(this.id)">
