--- a/Norriq-Solutions/Pages/BusinessPage.html
+++ b/Norriq-Solutions/Pages/BusinessPage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Branche</title>
     <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css" />
 </head>
 <body style="background-color:#002e36">
@@ -12,17 +12,13 @@
     </div>
 </div>
     <div class="main-body">
-        <p>Hvad har du brug for hjælp til?</p>
+        <p>Hvad sælger du?</p>
         <form action="../Pages/NORRIQSolutionsPage.html">
-            <input type="checkbox" id="ApplicationSolution1" name="ApplicationSolution1" value="Website" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution1"> Jeg ønsker at få en hjemmeside.</label><br>
-            <input type="checkbox" id="ApplicationSolution2" name="ApplicationSolution2" value="Webshop" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution2"> Jeg ønsker at få en webshop.</label><br>
-            <input type="checkbox" id="Solution3" name="ApplicationSolution3" value="Application" onclick="selectOnlyThisApplication(this.id)">
-            <label for="ApplicationSolution3"> Jeg ønsker en applikation.</label><br><br>
+            <input id="BusinessSelection" placeholder="Fx smykker, tøj, biler osv."/> <br/>
+            <p id="BusinessNotSelected"></p>
 
             <button onclick="goBack()">Tilbage</button>
-            <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedApplication();">
+            <input type="button" value="Næste" onclick="CheckIfBusinessIsEmpty();">
         </form>
 
     </div>
