--- a/Norriq-Solutions/Pages/NORRIQFrontPage.html
+++ b/Norriq-Solutions/Pages/NORRIQFrontPage.html
@@ -20,8 +20,8 @@
                             <a class="nav-link">Cases</a>
                         </li>
                         <li class="nav-item">
-                            <!--<a class="nav-link" href="NORRIQSolutionsPage.html">Find din løsning</a>-->
-                            <a class="nav-link">Find din løsning</a>
+                            <a class="nav-link" href="NORRIQSolutionsPage.html">Find din løsning</a>
+                            <!--<a class="nav-link">Find din løsning</a>-->
                             <!--<div class="nav-mega-menu" id="1">
         <div class="nav-overflow">
             <ul class="nav-submenu">
