--- a/Norriq-Solutions/Pages/NORRIQSolutionsApplication.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsApplication.html
@@ -26,8 +26,10 @@
             <label for="ApplicationSolution3"> Jeg ønsker at flytte min applikation.</label><br>
             <p class="description">Flyt din eksisterende applikation til NORRIQ hosting.</p>
             
+            <p id="appMsg"></p>
+
             <button onclick="goBack()">Tilbage</button>
-            <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedApplication();">
+            <input type="button" value="Næste" onclick="return WhichSolutionIsCheckedApplication();">
 
         </form>
 
