--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebshop.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebshop.html
@@ -27,8 +27,10 @@
         <label for="WebshopSolution3"> Jeg ønsker at flytte min webshop.</label><br>
         <p class="description">Flyt en eksisterende webshop til NORRIQ hosting.</p>
 
+        <p id="webshopMsg"></p>
+
         <button onclick="goBack()">Tilbage</button>
-        <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedWebshop();">
+        <input type="button" value="Næste" onclick="return WhichSolutionIsCheckedWebshop();">
     </form>
 
 </div>
