--- a/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
+++ b/Norriq-Solutions/Pages/NORRIQSolutionsWebsite.html
@@ -34,8 +34,10 @@
         <label for="Solution3"> Jeg ønsker en mobil hjemmeside.</label><br>
         <p class="description">Få en hjemmeside der også kan bruges på farten.</p>
 
+        <p id="websiteMsg"></p>
+
         <button onclick="goBack()">Tilbage</button>
-        <input type="submit" value="Næste" onclick="return WhichSolutionIsCheckedWebsite();">
+        <input type="button" value="Næste" onclick="return WhichSolutionIsCheckedWebsite();">
     </form>
 
 </div>
