--- a/Norriq-Solutions/Pages/MovingPage.html
+++ b/Norriq-Solutions/Pages/MovingPage.html
@@ -2,7 +2,7 @@
  <html>
  <head>
      <meta charset="utf-8" />
-     <title></title>
+     <title>Flyt løsning</title>
      <link rel="stylesheet" href="../CSS/NORRIQSolutionsFrontPage.css" />
  </head>
  <body style="background-color:#002e36">
